results/classifier/zero-shot/108/other/2770
device: 0.853
files: 0.842
network: 0.713
graphic: 0.708
semantic: 0.701
PID: 0.678
vnc: 0.670
KVM: 0.531
socket: 0.485
debug: 0.370
boot: 0.356
permissions: 0.190
performance: 0.151
other: 0.110

Build failure due to missing  keyctl_pkey_encrypt
Description of problem:

Steps to reproduce:
1. git checkout v7.2.0
2. ./configure --target-list=arm-softmmu;make
3. ../backends/cryptodev-lkcf.c: In function ‘cryptodev_lkcf_execute_task’:
../backends/cryptodev-lkcf.c:358:19: error: implicit declaration of function ‘keyctl_pkey_encrypt’; did you mean ‘keyctl_reject’? [-Werror=implicit-function-declaration]
             ret = keyctl_pkey_encrypt(key_id, op_desc,
                   ^~~~~~~~~~~~~~~~~~~
                   keyctl_reject
../backends/cryptodev-lkcf.c:358:19: error: nested extern declaration of ‘keyctl_pkey_encrypt’ [-Werror=nested-externs]
Additional information:

